<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:icon="@drawable/inicio"
            android:title="@string/item_inicio"/>
        <item
            android:id="@+id/item_eventos"
            android:icon="@drawable/ic_calendario"
            android:title="@string/item_calendario"/>
        <item
            android:id="@+id/item_campeonato"
            android:icon="@drawable/ic_campeonato"
            android:title="@string/item_campeonato"/>
        <item
            android:id="@+id/item_pilotos"
            android:icon="@drawable/ic_piloto"
            android:title="@string/item_pilotos"/>
        <item
            android:id="@+id/item_circuito"
            android:icon="@drawable/ic_circuito"
            android:title="@string/item_circuito"/>
        <item
            android:id="@+id/item_carrera"
            android:icon="@drawable/ic_carrera2"
            android:title="@string/item_carrera"/>
    </group>
</menu>