<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/background_header_seccion_pilotos"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/pos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/color_light" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:background="@color/background_header_seccion_pilotos"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/piloto"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/color_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reciclador"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/background_header_seccion_pilotos"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tiempo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/color_light"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/background_header_seccion_pilotos"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/dif"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/color_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:background="@color/background_header_seccion_pilotos"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/num"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/color_light"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

</RelativeLayout>